# ts7680-utils

./: Makefile.am  configure.ac
scripts/: Makefile.am  eMMC_post  prep_customer_image  prep_stock_image  tsincmac  tssilomon  tsstartup.service  tsstartupscript  tssupercapmon
src/: .gitignore  Makefile.am  crossbar-ts7680.h  crossbar-ts7682.h  fpga.c  fpga.h  getmac.c  gpiolib.c  gpiolib.h  i2c-dev.h  mx28adcctl.c  switchctl-ts768x.c  switchctl.c  switchctl.h  tshwctl.c  tsmicroctl.c
